SFA-1243 - set minwidth for input fields in datatables to fix shifting in worksheets

--- a/sugarcrm/styleguide/less/sugar-specific/datatables.less
+++ b/sugarcrm/styleguide/less/sugar-specific/datatables.less
@@ -321,6 +321,7 @@ table.dataTable {
   }
   input[type="text"] {
     min-height: 28px;
+    min-width: 100px;
     .box-sizing(border-box);
     padding: 4px 6px 3px;
   }
